@@ -15,9 +15,11 @@
 #include "../src/item_cache.h"
 #include "../src/logging.h"
 
+static ItemCacheOptions item_cache_options = {1};
+ 
 START_TEST (creating_with_missing_db_file_fails) {
   ItemCache *item_cache;
-  int rc = item_cache_create(&item_cache, "/tmp/missing.db");
+  int rc = item_cache_create(&item_cache, "/tmp/missing.db", &item_cache_options);
   assert_equal(CLASSIFIER_FAIL, rc);
   const char *msg = item_cache_errmsg(item_cache);
   assert_equal_s("unable to open database file", msg);
@@ -26,7 +28,7 @@ START_TEST (creating_with_missing_db_file_fails) {
 START_TEST (creating_with_empty_db_file_fails) {
   setup_fixture_path();
   ItemCache *item_cache;
-  int rc = item_cache_create(&item_cache, "fixtures/empty.db");
+  int rc = item_cache_create(&item_cache, "fixtures/empty.db", &item_cache_options);
   assert_equal(CLASSIFIER_FAIL, rc);
   const char *msg = item_cache_errmsg(item_cache); 
   assert_equal_s("Database file's user version does not match classifier version. Trying running classifier-db-migrate.", msg);
@@ -36,18 +38,19 @@ START_TEST (creating_with_empty_db_file_fails) {
 START_TEST (create_with_valid_db) {
   setup_fixture_path();
   ItemCache *item_cache;
-  int rc = item_cache_create(&item_cache, "fixtures/valid.db");
+  int rc = item_cache_create(&item_cache, "fixtures/valid.db", &item_cache_options);
   assert_equal(CLASSIFIER_OK, rc);
   teardown_fixture_path();
 } END_TEST
 
 /* Tests for fetching an item */
+
 ItemCache *item_cache;
 
 static void setup_cache(void) {
   setup_fixture_path();
   system("cp fixtures/valid.db /tmp/valid-copy.db");
-  item_cache_create(&item_cache, "/tmp/valid-copy.db");
+  item_cache_create(&item_cache, "/tmp/valid-copy.db", &item_cache_options);
 }
 
 static void teardown_item_cache(void) {
@@ -120,7 +123,7 @@ START_TEST (test_load_sets_cache_loaded_to_true) {
 /* Test iteration */
 void setup_iteration(void) {
   setup_fixture_path();
-  item_cache_create(&item_cache, "fixtures/valid.db");
+  item_cache_create(&item_cache, "fixtures/valid.db", &item_cache_options);
   item_cache_load(item_cache);
 }
 
@@ -212,7 +215,7 @@ START_TEST (test_random_background_has_right_count_for_a_token) {
 static void setup_modification(void) {
   setup_fixture_path();
   system("cp fixtures/valid.db /tmp/valid-copy.db");
-  item_cache_create(&item_cache, "/tmp/valid-copy.db");
+  item_cache_create(&item_cache, "/tmp/valid-copy.db", &item_cache_options);
 }
 
 static void teardown_modification(void) {
@@ -436,7 +439,7 @@ Item *item;
 static void setup_loaded_modification(void) {
   setup_fixture_path();
   system("cp fixtures/valid.db /tmp/valid-copy.db");
-  item_cache_create(&item_cache, "/tmp/valid-copy.db");
+  item_cache_create(&item_cache, "/tmp/valid-copy.db", &item_cache_options);
   //item_cache_set_feature_extractor(item_cache, NULL);
   item_cache_load(item_cache);
   
@@ -562,7 +565,7 @@ static Item * mock_feature_extractor(ItemCache * item_cache, const ItemCacheEntr
 static void setup_feature_extraction(void) {
   setup_fixture_path();
   system("cp fixtures/valid.db /tmp/valid-copy.db");
-  item_cache_create(&item_cache, "/tmp/valid-copy.db");
+  item_cache_create(&item_cache, "/tmp/valid-copy.db", &item_cache_options);
   item_cache_set_feature_extractor(item_cache, mock_feature_extractor, NULL);
   item_cache_load(item_cache);
   item_cache_start_feature_extractor(item_cache);
@@ -608,7 +611,7 @@ static Item * null_feature_extractor(ItemCache *item_cache, const ItemCacheEntry
 static void setup_null_feature_extraction(void) {
   setup_fixture_path();
   system("cp fixtures/valid.db /tmp/valid-copy.db");
-  item_cache_create(&item_cache, "/tmp/valid-copy.db");
+  item_cache_create(&item_cache, "/tmp/valid-copy.db", &item_cache_options);
   item_cache_set_feature_extractor(item_cache, null_feature_extractor, NULL);
   item_cache_load(item_cache);
   item_cache_start_feature_extractor(item_cache);
@@ -643,7 +646,7 @@ static Item * mock_feature_extractor2(ItemCache *item_cache, const ItemCacheEntr
 static void setup_full_update(void) {
   setup_fixture_path();
   system("cp fixtures/valid.db /tmp/valid-copy.db");
-  item_cache_create(&item_cache, "/tmp/valid-copy.db");
+  item_cache_create(&item_cache, "/tmp/valid-copy.db", &item_cache_options);
   item_cache_set_feature_extractor(item_cache, mock_feature_extractor2, NULL);
   item_cache_load(item_cache);
   item_cache_start_feature_extractor(item_cache);
@@ -752,7 +755,7 @@ time_t purge_time;
 static void setup_purging(void) {
   setup_fixture_path();
   system("cp fixtures/valid.db /tmp/valid-copy.db");
-  item_cache_create(&item_cache, "/tmp/valid-copy.db");
+  item_cache_create(&item_cache, "/tmp/valid-copy.db", &item_cache_options);
   
   time_t now = time(NULL);
   struct tm item_time;
